ERP and Cpanel Changes

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -38,7 +38,7 @@
                 <li ng-hide="erpEnabled=='false'" ng-class="{selected: subTab === 'ERP'}"> <a href="#"
                                                                                               ui-sref="reports">
                     <img src="images/erp.png"><span>ERP</span></a></li>
-                <li ng-class="{selected: activeTab === 'gpsReports'}"><a href="#" ui-sref="gpsReports">
+                <li ng-class="{selected: activeTab === 'gpsReports'}"><a href="#" ui-sref="listView">
                     <img src="images/gps.png"><span>GPS</span></a></li>
                 <li ng-class="{selected: activeTab === 'gps'}"><a href="#" ui-sref="fuelcard">
                     <img src="images/fuelcard.png"><span>Fuel Card</span></a></li>
