--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -87,37 +87,37 @@
 
                     </div>
                 </div>
-                <div class="form-group col-xs-12" ng-repeat="exp in trip.expense">
-
-                    <div class="col-xs-6 pall-zero">
-
+                <div class="clearfix"></div>
+                <div class="form-group pos-relative" ng-repeat="exp in trip.expense">
+                    <div class="col-xs-6">
                         <div class=" styling-input-list">
                             <select class="form-control custom-form-control" ng-model="exp.type">
-                                <option value="" selected>Select Expense Type*</option>
                                 <option ng-repeat="e in expenses" value="{{e._id}}">{{e.expenseName}}</option>
                                 <option value="others">Others</option>
                             </select>
+                            <label class="focus-effect-for-input" aria-hidden="true">Expense Type *</label>
                         </div>
-                        <div class=" styling-input-list" ng-show="exp.type==='others'">
-                            <input ng-model="exp.expenseName" type="number" class="form-control custom-form-control"
-                            >
+                        <div class="form-group styling-input-list" ng-show="exp.type==='others'">
+                            <input ng-model="exp.expenseName" type="text" class="form-control custom-form-control">
                             <label class="focus-effect-for-input" aria-hidden="true">Expense Type *</label>
                         </div>
                     </div>
-                    <div class=" col-xs-5 pall-zero">
-                        <div class=" styling-input-list">
-                            <input ng-model="exp.amount" type="number" class="form-control custom-form-control"
-                                   >
-                            <label class="focus-effect-for-input" aria-hidden="true">Amount *</label>
+                    <div class="form-group col-xs-6">
+                        <div class="styling-input-list">
+                            <input ng-model="exp.amount" type="number" class="form-control custom-form-control">
+                            <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
                         </div>
                     </div>
-                    <div class=" col-xs-1 pall-zero">
-                        <button class="btn btn-xs btn-info" ng-click="addExpense()" ng-show="$index==0">+</button>
-                        <button class="btn btn-xs btn-danger" ng-click="deleteExpense($index)" ng-show="$index>0">-</button>
+                        <a href="#" class="addingMaster" ng-click="addExpense()" ng-show="$index==0">
+                            <i class="fa fa-plus-square"></i> </a>
+                        <a href="#" class="addingMaster" ng-click="deleteExpense($index)" ng-show="$index>0">
+                            <i class="fa fa-minus-square"></i> </a>
+                        <div class="clearfix"></div>
 
-                    </div>
                 </div>
-                <div class="form-group col-xs-12" ng-show="partyType=='Commission'" >
+                <div class="clearfix"></div>
+
+                <div class="form-group col-xs-12" ng-show="partyType=='Commission'">
                     <div class=" styling-input-list">
                         <input ng-model="trip.commission" type="number" class="form-control custom-form-control"
                                id="commission">
@@ -294,7 +294,7 @@
     </div>
     <div class="modal-body">
         <div class="row">
-            <div class="col-sm-9 popup-center">
+            <div class="col-sm-10 popup-center">
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
                         <input ng-model="party.name" type="text" class="form-control custom-form-control"
@@ -311,6 +311,32 @@
 
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="form-group sms-email">
+                        <div class="sms">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="party.isSms">
+                                    <span class="cr ntfns">
+                                        <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                    </span>
+                                    SMS Notification
+                                </label>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-model="party.isEmail">
+                                    <span class="cr ntfns">
+                                        <i class="cr-icon ntfns-icon fa fa-check"></i>
+                                    </span>
+                                    Email Notification
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="clearfix"></div>
                 <div class="margin-top-20">
                     <div>
@@ -324,8 +350,8 @@
             </div>
         </div>
     </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="addNewParty();">Submit</button>
-            <button class="btn btn-danger" type="button" ng-click="close();">Cancel</button>
-        </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="addNewParty();">Submit</button>
+        <button class="btn btn-danger" type="button" ng-click="close();">Cancel</button>
+    </div>
 </script>
