--- a/client/views/partials/admin/orderProcess/loadOwnerBilling.html
+++ b/client/views/partials/admin/orderProcess/loadOwnerBilling.html
@@ -390,6 +390,8 @@
         <head>
             <title>Load Owner Billing Details</title>
         </head>
+        <body>
+        <div class="logo"></div>
         <div class="container">
             <h3 class="text-center">Load Owner Billing Details</h3>
             <div style="border: 1px solid #ccc; padding: 10px;margin:20px 0;border-radius: 5px;">
@@ -643,7 +645,7 @@
                       </ul>
                   </div>-->
         </div>
+        </body>
 
     </div>
-    </body>
 </div>
