--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -173,6 +173,14 @@
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
+                    <div class=" styling-input-list">
+
+                        <input type="file" class="form-control custom-form-control" multiple
+                               ng-model="files" ngf-select >
+                        <label class="focus-effect-for-input" aria-hidden="true">Attachments</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12">
                     <div class=" trip-share">
                         <div class="checkbox">
                             <label>
