--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -5,10 +5,9 @@
             <div class="col-sm-6 col-xs-12">
                 <div class="form-group col-xs-12">
                     <div class="">
-                        <date-picker id="permitExpiry" ng-model="trip.date" ban-future="'banFutureDate'"
-                                     placeholder="'Trip Date*'" class="'custom-form-control'">
+                        <date-picker id="permitExpiry" ng-model="trip.date" placeholder="'Trip Date*'" class="'custom-form-control'">
                         </date-picker>
-                    </div>
+                    </div>c
                 </div>
 
                 <div class="form-group col-xs-12 styling-input-list">
