--- a/client/views/partials/admin/orderProcess/createLoadRequest.html
+++ b/client/views/partials/admin/orderProcess/createLoadRequest.html
@@ -136,10 +136,9 @@
                             <select class="form-control order-form-control"
                                     ng-model="load.truckType">
                                 <option value="">Truck Type *</option>
-                                <option ng-repeat="truckType in truckTypesList">
+                                <option ng-repeat="truckType in trucksList">
                                     {{truckType.title}}/{{truckType.tonnes}}Tons
                                 </option>
-
                             </select>
                         </div>
                         <div class="form-group styling-input-list">
