--- a/client/views/index.html
+++ b/client/views/index.html
@@ -146,8 +146,9 @@
                                         </div>
                                         <div id="collapseThree" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
-                                                 <left-menu label="Receipts" ui-sref="receipts"></left-menu>
+                                                <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
+                                                <left-menu label="LoadRequest" ui-sref="loadRequest"></left-menu>
                                             </div>
                                         </div>
                                     </div>
@@ -169,7 +170,7 @@
 
 <!--bower scripts-->
 <script src="dist/components/components.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyAlxdJl-H99_0Zhq4a78CeRAqQShx1IXC0&libraries=place"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <!--Date Time Picker --->
 <script src="components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
